<resources>
    <string name="app_name">Target Heart Rate Zone and BMI calculator</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="calc">Calculate</string>
    <string name="BmiResult">BMI Result</string>
    <string name="HR_z5">Zone 5 Max Heart Rate Maximum Effort</string>
    <string name="HR_z4">Zone 4 Hardcore Training</string>
    <string name="HR_z3">Zone 3 Cardio / Endurance Training</string>
    <string name="HR_z2">Zone 2 Fitness Training / Fat Burning</string>
    <string name="HR_z1">Zone 1 Moderate Activity</string>

</resources>