<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">


    <TextView
        android:text="@string/age"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/editTextAge"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/height"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/editTextHeight"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/weight"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/editTextWeight"
        android:inputType="numberDecimal"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/calcButton"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>







</LinearLayout>